src/test/fun-test/semantic/MultipleClassDecl.java.err
Semantic error: multiple declaration of class a, line 6, pos 13
