src/test/fun-test/semantic/MultipleClassDecl.java
class Main {
    class a {}

    void main() {}

    class a {}
}
